Can get top menu items based on menu

--- a/clients/owner-client/src/app/_layouts/charts/top-ten-menu-items/top-ten-menu-items.component.css
+++ b/clients/owner-client/src/app/_layouts/charts/top-ten-menu-items/top-ten-menu-items.component.css
@@ -9,3 +9,9 @@
     border: 1px solid var(--primary);
     padding: 1rem;
 }
+
+@media (max-width: 960px) {
+    .main-wrapper {
+        flex-direction: column;
+    }
+}
