--- a/clients/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.html
+++ b/clients/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.html
@@ -1,99 +1,170 @@
 <form class="form-wrapper" [formGroup]="restaurantForm" (ngSubmit)="onSubmit()">
-    <div class="info-wrapper">
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Name</mat-label>
-            <input matInput placeholder="Enter restaurant name" formControlName="name">
-        </mat-form-field>
+  <div class="info-wrapper">
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Name</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant name"
+        formControlName="name"
+      />
+    </mat-form-field>
 
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Phone</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant phone number"
+        formControlName="phoneNumber"
+      />
+    </mat-form-field>
 
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Phone</mat-label>
-            <input matInput placeholder="Enter restaurant phone number" formControlName="phoneNumber">
-        </mat-form-field>
+    <div class="two-col">
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>City</mat-label>
+        <input
+          matInput
+          placeholder="Enter restaurant city"
+          formControlName="city"
+        />
+      </mat-form-field>
 
-        <div class="two-col">
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>City</mat-label>
-                <input matInput placeholder="Enter restaurant city" formControlName="city">
-            </mat-form-field>
-
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Address</mat-label>
-                <input matInput placeholder="Enter restaurant address" formControlName="address">
-            </mat-form-field>
-        </div>
-
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Postal Code</mat-label>
-            <input matInput placeholder="Enter restaurant postal code" formControlName="postalCode" zipCode>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Facebook</mat-label>
-            <input matInput placeholder="Enter restaurant facebook url" formControlName="facebookUrl">
-            <mat-icon svgIcon="facebook-logo" matPrefix></mat-icon>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Instagram</mat-label>
-            <input matInput placeholder="Enter restaurant instagram url" formControlName="instagramUrl">
-            <mat-icon svgIcon="instagram-logo" matPrefix></mat-icon>
-        </mat-form-field>
-
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Website</mat-label>
-            <input matInput placeholder="Enter restaurant website url" formControlName="websiteUrl">
-            <mat-icon matPrefix>public</mat-icon>
-        </mat-form-field>
-
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Address</mat-label>
+        <input
+          matInput
+          placeholder="Enter restaurant address"
+          formControlName="address"
+        />
+      </mat-form-field>
     </div>
-    <div class="description-wrapper">
 
-        <mat-form-field class="input-wrapper" appearance="outline">
-            <mat-label>Description</mat-label>
-            <textarea rows="12" matInput placeholder="Enter restaurant description"
-                formControlName="description"></textarea>
-        </mat-form-field>
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Postal Code</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant postal code"
+        formControlName="postalCode"
+        zipCode
+      />
+    </mat-form-field>
 
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Facebook</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant facebook url"
+        formControlName="facebookUrl"
+      />
+      <mat-icon svgIcon="facebook-logo" matPrefix></mat-icon>
+    </mat-form-field>
 
-        <div class="two-col">
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Country</mat-label>
-                <mat-select formControlName="countryId">
-                  <mat-option *ngFor="let country of countries" [value]="country.id">
-                    {{ country.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Instagram</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant instagram url"
+        formControlName="instagramUrl"
+      />
+      <mat-icon svgIcon="instagram-logo" matPrefix></mat-icon>
+    </mat-form-field>
 
-              <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Currencies</mat-label>
-                <mat-select formControlName="currencyId">
-                  <mat-option *ngFor="let currency of currencies" [value]="currency.id">
-                    {{ currency.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-        </div>
+    <mat-form-field appearance="outline" class="input-wrapper">
+      <mat-label>Website</mat-label>
+      <input
+        matInput
+        placeholder="Enter restaurant website url"
+        formControlName="websiteUrl"
+      />
+      <mat-icon matPrefix>public</mat-icon>
+    </mat-form-field>
 
+    <div class="two-col">
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Country</mat-label>
+        <mat-select formControlName="countryId">
+          <mat-option *ngFor="let country of countries" [value]="country.id">
+            {{ country.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
-        <div class="slide-wrapper">
-            <mat-slide-toggle color="primary" formControlName="isActive">Show in searces</mat-slide-toggle>
-            <mat-chip
-                [ngStyle]="{'background-color': restaurantForm.get('isActive')?.value ? 'var(--success)' : 'var(--warning)'}">
-            {{ restaurantForm.get('isActive')?.value ? 'Active' : 'Inactive' }}
-            </mat-chip>
-        </div>
-
-        <div class="btn-wrapper">
-
-            <button mat-raised-button color="primary" class="btn-full" [disabled]="restaurantForm.invalid">
-                <mat-icon>save</mat-icon>
-                Save
-            </button>
-    
-
-        </div>
-
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Currencies</mat-label>
+        <mat-select formControlName="currencyId">
+          <mat-option *ngFor="let currency of currencies" [value]="currency.id">
+            {{ currency.name }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
+  </div>
+  <div class="description-wrapper">
+    <mat-form-field class="input-wrapper" appearance="outline">
+      <mat-label>Description</mat-label>
+      <textarea
+        rows="12"
+        matInput
+        placeholder="Enter restaurant description"
+        formControlName="description"
+      ></textarea>
+    </mat-form-field>
+
+    <div class="visit-website">
+        Molimo posjetite
+        <a href="https://www.latlong.net/" target="_blank">ovu stranicu</a> i
+        odaberite tacne latitude i longitude vase lokacije i unesite ih u polja
+        ispod.
+        Sa ovim cete biti predlozeni korisnicima koji su vam blizu.
+      </div>
+  
+
+    <div class="two-col">
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Latitude</mat-label>
+        <input
+          matInput
+          placeholder="Restaurant Location Latitude"
+          formControlName="latitude"
+          type="number"
+        />
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="input-wrapper">
+        <mat-label>Longitude</mat-label>
+        <input
+          matInput
+          placeholder="Restaurant Location Longitude"
+          formControlName="longitude"
+          type="number"
+        />
+      </mat-form-field>
+    </div>
+
+    <div class="slide-wrapper">
+      <mat-slide-toggle color="primary" formControlName="isActive"
+        >Show in searces</mat-slide-toggle
+      >
+      <mat-chip
+        [ngStyle]="{
+          'background-color': restaurantForm.get('isActive')?.value
+            ? 'var(--success)'
+            : 'var(--warning)'
+        }"
+      >
+        {{ restaurantForm.get("isActive")?.value ? "Active" : "Inactive" }}
+      </mat-chip>
+    </div>
+
+    <div class="btn-wrapper">
+      <button
+        mat-raised-button
+        color="primary"
+        class="btn-full"
+        [disabled]="restaurantForm.invalid"
+      >
+        <mat-icon>save</mat-icon>
+        Save
+      </button>
+    </div>
+  </div>
 </form>
