--- a/clients/owner-client/src/app/_components/account-header/account-header.component.html
+++ b/clients/owner-client/src/app/_components/account-header/account-header.component.html
@@ -1,9 +1,9 @@
 <div class="main-wrapper">
-    <img class="image" src="{{ accountHeader.backgroundImage || 'http://localhost:5000/images/default/default.png' }}" alt="background-image">
+    <img class="image" src="{{ accountHeader.backgroundImage || 'https://noshnexus.com/images/default/default.png' }}" alt="background-image">
     <div class="content-wrapper">
         <div class="account-info">
             <div class="profile-image-wrapper">
-                <img (load)="isProfileLoading = false" class="profile-image" src="{{ accountHeader.profileImage || 'http://localhost:5000/images/default/default-profile.png' }}" alt="profile image">
+                <img (load)="isProfileLoading = false" class="profile-image" src="{{ accountHeader.profileImage || 'https://noshnexus.com/images/default/default-profile.png' }}" alt="profile image">
                 <div *ngIf="isProfileLoading" class="spinner-wrapper">
                     <mat-spinner></mat-spinner>
                 </div>
