--- a/clients/owner-client/src/app/_components/chart-card/chart-card.component.html
+++ b/clients/owner-client/src/app/_components/chart-card/chart-card.component.html
@@ -12,7 +12,7 @@
       mat-card-image
       (load)="isImageLoading = false"
       class="image"
-      src="{{ chart.imageUrl || 'http://localhost:5000/images/default/default.png' }}"
+      src="{{ chart.imageUrl || 'https://noshnexus.com/images/default/default.png' }}"
       alt="chart image"
     />
   </div>
