--- a/clients/owner-client/src/app/_components/order-card/order-card.component.html
+++ b/clients/owner-client/src/app/_components/order-card/order-card.component.html
@@ -11,7 +11,7 @@
     <div class="user-wrapper">
       <div class="image-wrapper">
         <img
-          src="{{ order.user.profileImage || 'http://localhost:5000/images/default/default-profile.png' }}"
+          src="{{ order.user.profileImage || 'https://noshnexus.com/images/default/default-profile.png' }}"
           alt="profile image"
           class="image"
         />
