--- a/clients/owner-client/src/app/_components/user-card/user-card.component.html
+++ b/clients/owner-client/src/app/_components/user-card/user-card.component.html
@@ -1,7 +1,7 @@
 <mat-card *ngIf="user" class="card">
     <div class="content-wrapper">
         <div class="image-wrapper">
-            <img mat-card-sm-image src="{{ user.profileImage || 'http://localhost:5000/images/default/default-profile.png' }}" alt="profile image">
+            <img mat-card-sm-image src="{{ user.profileImage || 'https://noshnexus.com/images/default/default-profile.png' }}" alt="profile image">
         </div>
         <div class="right-side">
             <mat-card-header class="username">{{ user.username }}</mat-card-header>
