Can delete employee profile image

--- a/clients/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
+++ b/clients/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
@@ -145,6 +145,6 @@
   <app-image-with-delete
     [isMain]="true"
     [image]="profileImage"
-    (deleteImage)="deleteImage($event)"
+    (deleteImage)="deleteProfileImage($event)"
   ></app-image-with-delete>
 </div>
