--- a/clients/owner-client/src/app/_layouts/employees/employees-edit/employees-edit.component.html
+++ b/clients/owner-client/src/app/_layouts/employees/employees-edit/employees-edit.component.html
@@ -109,6 +109,7 @@
   <app-image-with-delete 
     [isMain]="true" 
     [image]="profileImage"
+    (deleteImage)="deleteProfileImage($event)"
   >
   </app-image-with-delete>
 </div>
