--- a/clients/owner-client/src/app/_layouts/home/home.component.html
+++ b/clients/owner-client/src/app/_layouts/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="outline">
+<mat-form-field appearance="outline" class="mobile-full-width">
   <mat-label>Select your restaurant</mat-label>
   <mat-select [(ngModel)]="selectedRestaurant">
     <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
