--- a/clients/owner-client/src/app/_layouts/login/login.component.html
+++ b/clients/owner-client/src/app/_layouts/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="main-wrapper mat-app-background center">
   <form class="form-wrapper" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="logo-wrapper">
-      <img src="assets/img/logo-with-text-400x100.png" alt="logo image" />
+      <img class="logo-desktop" src="assets/img/logo-with-text-400x100.png" alt="logo image" />
+      <img class="logo-mobile" src="assets/img/logo-with-text-160x160.png" alt="logo image" />
     </div>
 
     <mat-form-field appearance="outline" class="max-width">
