--- a/clients/owner-client/src/app/_layouts/login/login.component.html
+++ b/clients/owner-client/src/app/_layouts/login/login.component.html
@@ -7,43 +7,25 @@
 
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Username</mat-label>
-      <input
-        matInput
-        placeholder="Enter your username"
-        formControlName="username"
-      />
+      <input matInput placeholder="Enter your username" formControlName="username" />
       <mat-icon matSuffix>person</mat-icon>
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Password</mat-label>
-      <input
-        matInput
-        [type]="hide ? 'password' : 'text'"
-        placeholder="Enter your password"
-        formControlName="password"
-      />
-      <button
-        mat-icon-button
-        matSuffix
-        (click)="hide = !hide"
-        [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide"
-        type="button"
-      >
+      <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password"
+        formControlName="password" />
+      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide" type="button">
         <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
       </button>
     </mat-form-field>
 
     <div class="submit-btn-wrapper">
-      <button
-        mat-raised-button
-        color="accent"
-        class="btn"
-        [disabled]="loginForm.invalid"
-      >
+      <button *ngIf="!isLoading" mat-raised-button color="accent" class="btn" [disabled]="loginForm.invalid">
         Login
       </button>
+      <mat-spinner *ngIf="isLoading" [diameter]="35"></mat-spinner>
     </div>
   </form>
 </div>
