Can view account details as employee

--- a/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/account-btn/account-btn.component.html
+++ b/clients/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/account-btn/account-btn.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <mat-menu #accountMenu="matMenu">
-  <button mat-menu-item routerLink="/account">
+  <button mat-menu-item routerLink="{{ role === 'owner' ? '/account': '/employee/account-details'}}">
     <mat-icon>account_circle</mat-icon> Account
   </button>
   <button mat-menu-item routerLink="/account/edit">
