Added account edit component

--- a/clients/owner-client/src/app/employee/_layouts/account/account-details/account-details.component.html
+++ b/clients/owner-client/src/app/employee/_layouts/account/account-details/account-details.component.html
@@ -1,5 +1,8 @@
 <ng-container *ngIf="account">
-    <app-account-header [accountHeader]="account.accountHeader">
+    <app-account-header 
+    [accountHeader]="account.accountHeader"
+    (edit)="onEdit()"
+    >
     </app-account-header>
     
     <div class="info-wrapper">
