Need to test live order as employee

--- a/clients/owner-client/src/app/employee/_layouts/orders/live-orders/live-orders.component.html
+++ b/clients/owner-client/src/app/employee/_layouts/orders/live-orders/live-orders.component.html
@@ -1,1 +1,11 @@
-<p>live-orders works!</p>
+<div class="orders-wrapper">
+    <ng-container *ngFor="let order of orders">
+      <lib-order-card
+        [order]="order"
+        (decline)="onDecline($event)"
+        (block)="onBlockUser($event)"
+        (accept)="onAccept($event)"
+      ></lib-order-card>
+    </ng-container>
+  </div>
+  
