Can view menus as employee

--- a/clients/owner-client/src/app/_components/main-components/side-nav/employee-side-nav/employee-side-nav.component.html
+++ b/clients/owner-client/src/app/_components/main-components/side-nav/employee-side-nav/employee-side-nav.component.html
@@ -1,9 +1,14 @@
 <app-side-nav-item [name]="'home'" [url]="'/employee/home'">
   <mat-icon class="svg">home</mat-icon>
 </app-side-nav-item>
+
 <app-side-nav-item [name]="'restaurant'" [url]="'/employee/restaurant'">
   <mat-icon class="svg">restaurant</mat-icon>
 </app-side-nav-item>
+
+<app-side-nav-dropdown [name]="'menus'" [itemListObj]="menusLinkItems">
+  <mat-icon class="svg">menu_book</mat-icon>
+</app-side-nav-dropdown>
 
 <app-side-nav-dropdown [name]="'orders'" [itemListObj]="ordersLinkItems">
   <mat-icon class="svg">list_alt</mat-icon>
