Can navigate to menu details as both

--- a/clients/owner-client/src/app/_components/menu-card/menu-card.component.html
+++ b/clients/owner-client/src/app/_components/menu-card/menu-card.component.html
@@ -24,7 +24,7 @@
         class="max-width"
         mat-raised-button
         color="accent"
-        routerLink="/menus/{{ menu.id }}"
+        (click)="onViewMore()"
         [disabled]="disable"
       >
         View More
