Can update menu as employee

--- a/clients/owner-client/src/app/employee/_layouts/menus/menu-details/menu-details.component.html
+++ b/clients/owner-client/src/app/employee/_layouts/menus/menu-details/menu-details.component.html
@@ -16,7 +16,7 @@
           <button
             mat-raised-button
             color="accent"
-            routerLink="/menus/edit/{{ menu.id }}"
+            routerLink="/employee/menus/edit/{{ menu.id }}"
           >
             Edit Menu
           </button>
