--- a/clients/owner-client/src/app/_layouts/menus/menu-item-list/menu-item-list.component.html
+++ b/clients/owner-client/src/app/_layouts/menus/menu-item-list/menu-item-list.component.html
@@ -1,5 +1,9 @@
 <div class="main-wrapper">
-    <ng-container *ngFor="let menuItem of menuItems">
-        <app-menu-item-card [menuItem]="menuItem" (delete)="onDelete($event)"></app-menu-item-card>
-    </ng-container>
+  <ng-container *ngFor="let menuItem of menuItems">
+    <app-menu-item-card
+      [menuItem]="menuItem"
+      (delete)="onDelete($event)"
+      (onViewMoreEmitter)="onViewMore($event)"
+    ></app-menu-item-card>
+  </ng-container>
 </div>
