Can update menu item as employee

--- a/clients/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
+++ b/clients/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
@@ -61,7 +61,7 @@
         <button
           mat-raised-button
           color="accent"
-          routerLink="/menus/menu-items/edit/{{ menuItem.id }}"
+          (click)="onEdit()"
         >
           <mat-icon>edit</mat-icon>
           Edit
