--- a/clients/owner-client/src/app/_layouts/orders/orders-history/orders-history.component.html
+++ b/clients/owner-client/src/app/_layouts/orders/orders-history/orders-history.component.html
@@ -30,7 +30,7 @@
 
 <div class="orders-wrapper">
   <ng-container *ngFor="let order of orders">
-    <lib-order-card [order]="order"></lib-order-card>
+    <app-order-card [order]="order"></app-order-card>
   </ng-container>
 </div>
 
