--- a/clients/owner-client/src/app/_components/order-card/order-card.component.html
+++ b/clients/owner-client/src/app/_components/order-card/order-card.component.html
@@ -11,7 +11,7 @@
     <div class="user-wrapper">
       <div class="image-wrapper">
         <img
-          src="{{ order.user.profileImage || 'https://noshnexus.com/images/default/default-profile.png' }}"
+          src="{{ order.user.profileImage || 'http://localhost:5000/images/default/default-profile.png' }}"
           alt="profile image"
           class="image"
         />
@@ -30,7 +30,7 @@
       <mat-icon>storefront</mat-icon>
       <div class="table-name">
         <a
-          routerLink="/restaurants/{{ order.restaurant.id }}"
+          (click)="onRestaurant()"
           target="_blank"
           >{{ order.restaurant.name }}</a
         >
@@ -54,7 +54,7 @@
               <div class="menu-item-row">
                 <div>
                   <a
-                    routerLink="/menus/menu-items/{{ menuItem.id }}"
+                    (click)="onMenuItem(menuItem.id)"
                     target="_blank"
                     >{{ menuItem.name }}</a
                   >
@@ -83,12 +83,12 @@
       </mat-tab>
     </mat-tab-group>
   </div>
-  <div class="btn-wrapper" *ngIf="order.status === 'InProgress'">
+  <div class="btn-wrapper" *ngIf="order.status === 'InProgress' && hasBtns">
     <button
       (click)="onAccept()"
       type="button"
       mat-raised-button
-      style="background-color: var(--success)"
+      style="background-color: #66BB6A"
     >
       <mat-icon>check</mat-icon>
       Accept
@@ -97,7 +97,7 @@
       (click)="onDecline()"
       type="button"
       mat-raised-button
-      style="background-color: var(--warning)"
+      style="background-color: #EF5350"
     >
       <mat-icon>error</mat-icon>
       Decline
