--- a/clients/owner-client/src/app/_layouts/tables/tables.component.html
+++ b/clients/owner-client/src/app/_layouts/tables/tables.component.html
@@ -1,11 +1,26 @@
-<mat-form-field appearance="outline" class="mobile-full-width">
-  <mat-label>Select Restaurant</mat-label>
-  <mat-select (valueChange)="onChangeRestaurant($event)">
-    <mat-option *ngFor="let restaurant of restaurants" [value]="restaurant.id">
-      {{ restaurant.name }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+<div class="header-wrapper">
+  <mat-form-field appearance="outline" class="mobile-full-width">
+    <mat-label>Select Restaurant</mat-label>
+    <mat-select (valueChange)="onChangeRestaurant($event)">
+      <mat-option
+        *ngFor="let restaurant of restaurants"
+        [value]="restaurant.id"
+      >
+        {{ restaurant.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <button
+    mat-raised-button
+    color="accent"
+    class="mobile-full-width"
+    (click)="onGetQrCodes()"
+    [disabled]="selectedRestaurant === -1"
+  >
+    Get Restaurant QR Codes
+  </button>
+</div>
 
 <div class="tables-wrapper">
   <ng-container *ngFor="let table of tables">
